--- a/qmd-files/tieto_osallisuus.qmd
+++ b/qmd-files/tieto_osallisuus.qmd
@@ -10,6 +10,8 @@ Kuntalain mukaan asukkaalla sekä alueella toimivalla yhteisöllä ja säätiöl
 
 Kaupunki ja sen toimijat järjestävät asukkaille ja eri toimijoille avoimia tilaisuuksia. Keskustelutilaisuudet tarjoavat asukkaille tilaisuuden kertoa mielipiteistään asiantuntijoille ja päättäjille. Onnistunut tilaisuus synnyttää vuoropuhelua ja tuloksellista dialogia.
 
+Kaupunginjohtaja on Kangasalan asukkaiden tavattavissa säännöllisesti kaupungin infopisteellä Lentolan Prismassa. Asukastilaisuuksien tarkemmista ajankohdista informoidaan hyvissä ajoin eri kanavissa kuntalaisten saavuttamiseksi. Asukastilaisuuksia järjestetään kaksi kertaa vuodessa, sekä keväällä että syksyllä. Tilaisuudet ovat vapaamuotoisia keskustelutilaisuuksia, jossa asukkailla on mahdollisuus päästä keskustelemaan mistä vain mieltä askarruttavasta asiasta ilman ennakkoilmoittautumista.
+
 Kangasalla järjestetään uusien asukkaiden tilaisuus vuosittain kulttuuri- ja hyvinvointitorin yhteydessä. Palvelukeskukset on järjestäneet Kangasalla streamattuja tilaisuuksia, joissa kuntalaiset ovat voineet etukäteen tai tilaisuudessa esittää kysymyksiä.
 
 ## Avoimet ovet
