--- a/qmd-files/tieto_osallisuus.qmd
+++ b/qmd-files/tieto_osallisuus.qmd
@@ -182,37 +182,47 @@ Kaupunki toteuttaa monipuolisin viestintätavoin toteutettuja kyselyitä asukkai
 
     -   Varhaiskasvatus- ja esiopetusyksiköillä omat Instagram-sivut, lisäksi ryhmillä suljetut Instagram-sivut huoltajille
 
--   [Kaupungin Internet-sivujen chat-palvelu](https://www.kangasala.fi/)
+-   Internet-sivut:
 
--   [Kangasalan kirjasto palvelee Piki-kirjastojen chatissa](https://www.kangasala.fi/omatuutiset/piki-verkkokirjaston-chat-palvelu/)
+    -   [Kangasalan kaupunki, chat-palvelu sivujen oikeassa alareunassa](https://www.kangasala.fi/) 
 
--   Kuulutukset ja ilmoitukset: [Kangasalan kaupunki - ajankohtaista](https://www.kangasala.fi/#news)
+    -   [Lamminrahkan kaupunginosa](https://www.lamminrahka.fi/)
+
+    -   [Kangasalan kirjasto palvelee Piki-kirjastojen chatissa](https://www.kangasala.fi/omatuutiset/piki-verkkokirjaston-chat-palvelu/)
+    -   Kuulutukset ja ilmoitukset: [Kangasalan kaupunki - ajankohtaista](https://www.kangasala.fi/#news)
 
 -   Linkedin:
 
     -   [Oskari Auvinen - kaupunginjohtaja](https://fi.linkedin.com/in/oskariauvinen)
     -   [Kangasalan kaupunki](https://fi.linkedin.com/company/kangasalan-kaupunki)
-
--   Perinteiset ilmoitustaulut
-
--   Puhelinvaihde
+    -   [Lamminrahka](https://fi.linkedin.com/company/lamminrahka?trk=public_post_feed-actor-name)
 
 -   Snapchat:
 
     -   Nuorisotilojen snapnimet @klaveturi @klasentteri @klasahku @klaruutis @kylakolli
 
--   TikTok:
-
-    -   klanuorisojaliikunta (@klanuorisojaliikunta) \| TikTok
+    -   Etsivä nuorisotyö: @etsivakangasala
 
 -   Videot:
 
-    -   (Dreambroker-kanava): [Kangasala-kanava](https://dreambroker.com/channel/89q2oh3a/#/menu)
+    -   Dreambroker-kanava: [Kangasala-kanava](https://dreambroker.com/channel/89q2oh3a/#/menu)
 
     -   Youtube: [Kangasalan kaupunki](https://www.youtube.com/@kangasalankaupunki9294)
 
 -   Infonäytöt
 
+    -   Kaupungin virasto 1. Kunnantie 1, 36200 Kangasala
+
+    -   Kaupungin virasto 2 (tekninen keskus) Urheilutie 13-15, 36200 Kangasala
+
+    -   Kaupunki-info, Mäkirinteentie 10, 36220 Kangasala (Kangasalan Prisma-keskuksessa) 
+
+    -   Pääkirjasto, Keskusaukio 2, 36200 Kangasala
+
+    -   Ruutanan monitoimitalo, Leppätie 1, 36110 Ruutana
+
+-   Kangasalan kaupungin neuvonta ja vaihde: p. 03 5655 3000 neuvonta@kangasala.fi
+ 
 
 ## Tilastotietoa Kangasalta
 
