--- a/paatoksenteko_osallisuus.qmd
+++ b/paatoksenteko_osallisuus.qmd
@@ -16,17 +16,17 @@ Kaupunginvaltuusto voi päättää, että kaupungille kuuluvasta asiasta toimite
 
 Kaupunginhallitus asettaa vaikuttamistoimielimet. Kangasalla on toiminnassa seuraavat vaikuttamistoimielimet:
 
--   Nuorisovaltuusto
+        -   Nuorisovaltuusto
 
--   Vammaisneuvosto
+        -   Vammaisneuvosto
 
--   Vanhusneuvosto
+        -   Vanhusneuvosto
 
     -   Ei lakisääteisiä:
 
-        -   Vapaa-ajanasukkaiden viestintäryhmä (ei lakisääteisiä)
+        -   Kausiasukkaiden viestintäryhmä 
 
-        -   Seuraparlamentti (liikuntapalvelut) (ei lakisääteisiä)
+        -   Seuraparlamentti (liikuntapalvelut) 
 
 ## Kaupungin viralliset toimielimet
 
