--- a/valmistelu.qmd
+++ b/valmistelu.qmd
@@ -1,6 +1,6 @@
 # Valmistelu ja tavoitteet
 
-Suunnitelman laadintaan ja valmisteluun on osallistunut poikkihallinnollinen tiimi eri palvelukeskuksista. Työryhmä työskenteli kevään ja syksyn 2023 ajan. Työn keskisiä tehtäviä on selkeyttää osallisuuden kokonaisuutta ja tuoda uusia vaihtoehtoja esille. Valmistelussa on käytetty osallistuvaa työotetta. Suunnitelman tarkoituksena on avata osallisuuden käsitettä ja kuvata nykyisen osallisuuden muotoja sekä kehittää toimintatapoja.
+Suunnitelman alkuperäinen versio laadittiin vuonna 2023 poikkihallinnollisena yhteistyönä. Suunnitelman valmisteluun osallistui eri palvelukeskuksista koottu työryhmä. Keskeisiä tavoitteita olivat osallisuuden kokonaisuuden selkeyttäminen sekä uusien osallistumisen tapojen ja vaihtoehtojen esiin tuominen. Valmistelussa hyödynnettiin osallistavaa työotetta, jonka avulla varmistettiin monipuolinen näkökulmien huomiointi. Keväällä 2025 suunnitelma päivitettiin poikkihallinnollisessa yhteistyössä vastaamaan ajankohtaisia tarpeita ja vahvistamaan osallisuuden rakenteita entisestään. 
 
 Osallisuussuunnitelma on tehty, sillä Kuntalain mukaan kuntalaisten itsehallinnon vakavasti ottava kunta muotoilee (lainsäädännön raameissa) palveluita yhdessä kuntalaisten kanssa. Suunnitelma tukee myös hyvinvointia, sillä osallisuutta kokeva ja yhteiskuntaan kiinnittyvä kaupunkilainen pystyy tuottamaan ja jakamaan hyvinvointia muille. Tämä lisää yhteisön hyvinvointia. Vahva osallisuus luo turvallista arkea ja myönteisissä kohtaamisessa syntyy myös uusia ajatuksia. Yhteisöt ovat myös resurssien käytön ja kehittämisen kannalta olellisia voimavaroja kaupungissa. Avoin päätöksenteko ja yhdessä tuotettu tieto hyödyttävät ja tekevät päätöksistä hyväksyttävämpiä. Yhteisöjen ja osallisuuden kautta ehkäistään myös syrjäytymistä. Kaupungille osallisuuden edistäminen on laissa määritelty. Oikeus osallistua yhteiskunnan ja elinympäristönsä kehittämiseen on määritelty perustuslaissa.
 
